--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.27",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
