--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "framer-motion": "^11.3.27",
     "gsap": "^3.12.5",
     "lucide-react": "^0.424.0",
+    "mongoose": "^8.6.1",
     "next": "14.2.5",
+    "next-cloudinary": "^6.11.0",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
@@ -26,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
