--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dswegda7g"
 CLOUDINARY_API_SECRET="ZpGs5eHHpd3pSAHbW2BnRC5TTvI"
-MONGODB_URI="mongodb+srv://ayansheikh:ayansheikh@cluster0.bxwdrui.mongodb.net/"
+MONGODB_URI="mongodb+srv://ayansheikh:ayansheikh@cluster0.bxwdrui.mongodb.net/portfolio?retryWrites=true&w=majority"
 
 GMAIL_USER=ayansheikh6600@gmail.com
 GMAIL_PASS=whpdmwwebeuayhph
